# Udemy-Learn-Actix-Web-and-SqlX-and-Create-a-Twitter-Api-Clone

./: .gitignore  README.md  chatGPT.txt
l02-architecture-of-actix-web/: Cargo.toml  README.md  l02-architecture-of-actix-web.http
l02-architecture-of-actix-web/src/: main.rs
l03-extractor-introduction-and-app-state/: Cargo.toml  README.md  l03-extractors-introduction-and-app-state.http
l03-extractor-introduction-and-app-state/src/: main.rs
l04-core-extractors-path-and-json/: Cargo.toml  README.md  l04-core-extractors-path-and-json.http
l04-core-extractors-path-and-json/src/: main.rs
l05-extractors-multipart-handling-forms-and-files/: Cargo.toml  README.md
l06-response/: Cargo.toml  README.md  l06-response.http
l06-response/src/: http_response.rs  impl_response.rs  json_response.rs  main.rs  string_str.rs
l07-error-handling/: Cargo.toml  README.md  l07-error-handling.http
l07-error-handling/src/: complex.rs  main.rs  simple.rs
l08-handlers/: Cargo.toml  README.md  l08-handlers.http
l08-handlers/src/: main.rs
l10-learning-sqlx-database-driver/: Cargo.toml  README.md  docker-compose.yml
l10-learning-sqlx-database-driver/src/: main.rs
l12-overview-of-project-structure/: Cargo.toml  README.md
l12-overview-of-project-structure/src/: lib.rs  main.rs
l12-overview-of-project-structure/tests/: integration_test.rs
l13-l14-final-project-twitter-api-clone/: README.md
