[package]
name = "l10-learning-sqlx-database-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.38" , features = ["serde"]}
derive_more = "0.99.17"
fake = { version = "2.9.2", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4" , features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"